# marketlens

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  settings.py
backend/agents/: runner.py
backend/agents/composition/: agent.py  prompts.py
backend/agents/planning/: agent.py  prompts.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/api/: main.py
backend/api/routes/: alerts.py  chat.py  journal.py  portfolio.py  tools.py  watchlist.py
backend/core/: models.py  provider.py  repo.py  sqlalchemy_repo.py
backend/core/alerts/: repo.py
backend/core/filings/: repo.py
backend/core/journal/: repo.py
backend/core/news/: repo.py
backend/core/portfolio/: repo.py
backend/core/securities/: repo.py
backend/core/watchlist/: repo.py
backend/infra/: container.py
backend/infra/db/: provider.py  uow.py
backend/infra/embedding/: provider.py  service.py
backend/infra/http/: provider.py
backend/infra/llm/: provider.py
backend/ingestion/: cli.py  edgar.py  ingest_filings.py  ingest_news.py  seed.py  text.py
backend/mcp_server/: README.md  claude_desktop_config.sample.json  server.py
backend/retrieval/: filings_retriever.py  interfaces.py  news_retriever.py
backend/skills/: adk_tools.py  alerts.py  fundamentals.py  journal.py  market_data.py  news.py  portfolio.py  provider.py  types.py  watchlist.py
backend/tests/: test_adk_tools.py  test_settings.py  test_skills.py  test_text.py  test_uow.py
(+21 files in other folders)
