[project]
name = "marketlens"
version = "0.1.0"
description = "Cited stock-research RAG app — ADK agents + Dishka DI + FastAPI + Postgres/pgvector + MCP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "dishka>=1.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3.0",
  "google-adk>=1.2.0",
  "litellm>=1.55.0",
  "fastembed>=0.4.0",
  "mcp>=1.2.0",
  "yfinance>=0.2.50",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=4.0",
  "respx>=0.21",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["settings"]

[tool.setuptools.packages.find]
where = ["."]
include = ["infra*", "core*", "retrieval*", "skills*", "agents*", "api*", "ingestion*", "mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
